--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
-    "dev": "nodemon app.js"
+    "dev": "nodemon app.js",
+    "commit": "cz"
   },
   "keywords": [],
-  "author": "",
+  "author": "ZeYuan",
   "license": "ISC",
   "dependencies": {
     "commitizen": "^4.3.0",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "express-handlebars": "^7.1.2"
   }
 }
